--- a/xiechengwork/xiecheng.html
+++ b/xiechengwork/xiecheng.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="xiecheng.css">
 
+    <link rel="stylesheet" href="xysgs.css">
+
 </head>
 <body>
 <nav>
@@ -163,7 +165,38 @@
 </div>
 <div class="con-4">
     <div class="c-4">
+        <div class="c-4-c">
+                <div class="ck-left">
+                    <div class="left-mulu">酒店</div>
+                    <div class="left-mulu">机票</div>
+                    <div class="left-mulu">旅游</div>
+                    <div class="left-mulu">跟团游</div>
+                    <div class="left-mulu">自由游</div>
+                    <div class="left-mulu">火车</div>
+                    <div class="left-mulu">用车</div>
+                </div>
 
+                <div class="main">
+                    <div class="bt">
+                        <div><a href="">国内酒店</a></div>
+                        <div><a href="">海外酒店</a></div>
+                        <div><a href="">民宿</a></div>
+                        <div><a href="">酒店团购</a></div>
+                        <div> <a href="">酒店+景点</a></div>
+                        <div> <a href="">会议·团房</a></div>
+
+                    </div>
+
+                    <div class="item"> 目&nbsp;&nbsp;的&nbsp;&nbsp;地 <input type="text" placeholder="中文/拼音"></div>
+                    <div class="item">入住日期&nbsp;&nbsp;<input type="text" placeholder="2019-9-8"></div>
+                    <div class="item"> 房&nbsp;&nbsp;间&nbsp;&nbsp;数 <input type="text" placeholder="1间"></div>
+                    <div class="item">酒店级别&nbsp;&nbsp;<input type="text" placeholder="不限"></div>
+                    <div class="an">搜索</div>
+
+
+                </div>
+
+            </div>
     </div>
 </div>
 <div class="con-5">
@@ -322,7 +355,6 @@
                     </div>
                 </div>
             </div>
-
 
         </div>
     </div>
@@ -931,23 +963,11 @@
     <div class="con-5-0">
         <h2>
         <span>
-            境外租车
+            当地玩乐·出境
             <i class="i1"></i>
         </span>
             <span>
-            境外接送机
-            <i></i>
-        </span>
-            <span>
-            国内租车
-            <i></i>
-        </span>
-            <span>
-            国内接送机
-            <i></i>
-        </span>
-            <span>
-            日租包车
+            当地玩乐·境内
             <i></i>
         </span>
         </h2>
@@ -955,12 +975,12 @@
     </div>
     <div class="con-7-0">
         <ul>
-            <h4>热门城市</h4>
+            <h4>热门目的地</h4>
             <li>
                 <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
+                    <div>普吉岛 <i></i></div>
+                    <div>曼谷</div>
+                    <div style="border: none">东京</div>
                 </a>
             </li>
             <li>
@@ -1004,20 +1024,132 @@
     </div>
     <div class="con-7-1">
         <ul class="">
-            <li style="background: #3983e4 ; color: white">小型轿车</li>
-            <li>中型轿车</li>
-            <li>大型轿车</li>
-            <li>高档轿车</li>
-            <li>中型SUV</li>
-            <li>标准SUV</li>
-            <li>全尺寸SUV</li>
+            <li style="background: #3983e4 ; color: white">一日游</li>
+            <li>演出/赛事</li>
+            <li>交通接驳</li>
+            <li>当地美食</li>
+            <li>游船观光</li>
+            <li>SPA水疗</li>
+            <li>特色体验</li>
         </ul>
         <div class="box4">
+            <div class="sbox4">
+                <div class="s4-1 s4-11"></div>
+                <span>【携程专线】+冲绳县万座毛</span>
+                <div class="s4-3">
+                    <div class="s-3-1">自家梦幻号公路</div>
+                    <div class="s-3-2">
+                        <span class="sp1">￥</span>
+                        <span class="sp2">229</span>
+                        <span class="sp3">起</span>
+                    </div>
+                </div>
+            </div>
             <div class="sbox4">
                 <div class="s4-1"></div>
                 <span>美国 &nbsp;洛杉矶</span>
                 <div class="s4-3">
                     <div class="s-3-1">自家梦幻号公路</div>
+                    <div class="s-3-2">
+                        <span class="sp1">￥</span>
+                        <span class="sp2">164</span>
+                        <span class="sp3">起</span>
+                    </div>
+                </div>
+            </div>
+            <div class="sbox4">
+                <div class="s4-1"></div>
+                <span>美国 &nbsp;洛杉矶</span>
+                <div class="s4-3">
+                    <div class="s-3-1">自家梦幻号公路</div>
+                    <div class="s-3-2">
+                        <span class="sp1">￥</span>
+                        <span class="sp2">164</span>
+                        <span class="sp3">起</span>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+    </div>
+</div>
+<div class="con-c5 ">
+    <div class="con-5-0">
+        <h2>
+        <span>
+            全球购
+            <i class="i1"></i>
+        </span>
+        </h2>
+
+    </div>
+    <div class="con-7-0">
+        <ul>
+            <h4>热门目的地</h4>
+            <li>
+                <a href="">
+                    <div>香港 <i></i></div>
+                    <div>澳门</div>
+                    <div style="border: none">日本</div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div>洛杉矶 <i></i></div>
+                    <div>旧金山</div>
+                    <div style="border: none">墨尔本</div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div>洛杉矶 <i></i></div>
+                    <div>旧金山</div>
+                    <div style="border: none">墨尔本</div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div>洛杉矶 <i></i></div>
+                    <div>旧金山</div>
+                    <div style="border: none">墨尔本</div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div>洛杉矶 <i></i></div>
+                    <div>旧金山</div>
+                    <div style="border: none">墨尔本</div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div>洛杉矶 <i></i></div>
+                    <div>旧金山</div>
+                    <div style="border: none">墨尔本</div>
+                </a>
+            </li>
+
+        </ul>
+
+    </div>
+    <div class="con-7-1">
+        <ul class="">
+            <li style="background: #3983e4 ; color: white">热门商户</li>
+            <li>新店首选</li>
+            <li>奢品大牌</li>
+            <li>口碑推荐</li>
+            <li>综合商场</li>
+
+        </ul>
+        <div class="box4">
+            <div class="sbox4">
+                <div class="s4-1 s4-12"></div>
+                <span>DFS旗下T广场</span>
+                <div class="s4-3">
+                    <div class="s-3-1">中国·香港</div>
                     <div class="s-3-2">
                         <span class="sp1">￥</span>
                         <span class="sp2">164</span>
@@ -1060,23 +1192,11 @@
     <div class="con-5-0">
         <h2>
         <span>
-            境外租车
+            目的地攻略
             <i class="i1"></i>
         </span>
             <span>
-            境外接送机
-            <i></i>
-        </span>
-            <span>
-            国内租车
-            <i></i>
-        </span>
-            <span>
-            国内接送机
-            <i></i>
-        </span>
-            <span>
-            日租包车
+            旅游旗舰店
             <i></i>
         </span>
         </h2>
@@ -1084,7 +1204,7 @@
     </div>
     <div class="con-7-0">
         <ul>
-            <h4>热门城市</h4>
+            <h4>当季推荐</h4>
             <li>
                 <a href="">
                     <div>洛杉矶 <i></i></div>
@@ -1133,146 +1253,15 @@
     </div>
     <div class="con-7-1">
         <ul class="">
-            <li style="background: #3983e4 ; color: white">小型轿车</li>
-            <li>中型轿车</li>
-            <li>大型轿车</li>
-            <li>高档轿车</li>
-            <li>中型SUV</li>
-            <li>标准SUV</li>
-            <li>全尺寸SUV</li>
+            <li style="background: #3983e4 ; color: white">氢气球专栏</li>
+            <li>旅行正当时</li>
+            <li>看海悠悠乐</li>
+            <li>教你买买买</li>
+
         </ul>
         <div class="box4">
             <div class="sbox4">
-                <div class="s4-1"></div>
-                <span>美国 &nbsp;洛杉矶</span>
-                <div class="s4-3">
-                    <div class="s-3-1">自家梦幻号公路</div>
-                    <div class="s-3-2">
-                        <span class="sp1">￥</span>
-                        <span class="sp2">164</span>
-                        <span class="sp3">起</span>
-                    </div>
-                </div>
-            </div>
-            <div class="sbox4">
-                <div class="s4-1"></div>
-                <span>美国 &nbsp;洛杉矶</span>
-                <div class="s4-3">
-                    <div class="s-3-1">自家梦幻号公路</div>
-                    <div class="s-3-2">
-                        <span class="sp1">￥</span>
-                        <span class="sp2">164</span>
-                        <span class="sp3">起</span>
-                    </div>
-                </div>
-            </div>
-            <div class="sbox4">
-                <div class="s4-1"></div>
-                <span>美国 &nbsp;洛杉矶</span>
-                <div class="s4-3">
-                    <div class="s-3-1">自家梦幻号公路</div>
-                    <div class="s-3-2">
-                        <span class="sp1">￥</span>
-                        <span class="sp2">164</span>
-                        <span class="sp3">起</span>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-        </div>
-    </div>
-</div>
-<div class="con-c5 ">
-    <div class="con-5-0">
-        <h2>
-        <span>
-            境外租车
-            <i class="i1"></i>
-        </span>
-            <span>
-            境外接送机
-            <i></i>
-        </span>
-            <span>
-            国内租车
-            <i></i>
-        </span>
-            <span>
-            国内接送机
-            <i></i>
-        </span>
-            <span>
-            日租包车
-            <i></i>
-        </span>
-        </h2>
-
-    </div>
-    <div class="con-7-0">
-        <ul>
-            <h4>热门城市</h4>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div>洛杉矶 <i></i></div>
-                    <div>旧金山</div>
-                    <div style="border: none">墨尔本</div>
-                </a>
-            </li>
-
-        </ul>
-
-    </div>
-    <div class="con-7-1">
-        <ul class="">
-            <li style="background: #3983e4 ; color: white">小型轿车</li>
-            <li>中型轿车</li>
-            <li>大型轿车</li>
-            <li>高档轿车</li>
-            <li>中型SUV</li>
-            <li>标准SUV</li>
-            <li>全尺寸SUV</li>
-        </ul>
-        <div class="box4">
-            <div class="sbox4">
-                <div class="s4-1"></div>
+                <div class="s4-1 s4-13"></div>
                 <span>美国 &nbsp;洛杉矶</span>
                 <div class="s4-3">
                     <div class="s-3-1">自家梦幻号公路</div>
@@ -1421,7 +1410,7 @@
     <div class="con-5-0">
         <h2>
             <span>
-            旅行服务
+            企业商旅
             <i class="i1"></i>
         </span>
         </h2>
@@ -1433,30 +1422,15 @@
         <div class="box5">
             <div class="sbox5">
                 <div class="s5-t">
-                    <div class="t-l">
+                    <div class="t-l1">
                         <i></i>
                     </div>
                     <div class="t-r">
-                        <h5>出境WiFi</h5>
-                        <p>全球出境WiFi租赁 <br>流量不限、多人共享、携带便捷、地价信号强</p>
+                        <h5>差旅预定管理</h5>
+                        <p>海量差旅产品，全流程服务 <br>智能管控，助力企业差旅降本提效</p>
                     </div>
                 </div>
-                <div class="s5-b">
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-                        日本
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
 
-                        韩国
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-
-                        欧洲通用
-                    </div>
-                </div>
             </div>
             <div class="sbox5">
                 <div class="s5-t">
@@ -1468,22 +1442,7 @@
                         <p>全球出境WiFi租赁 <br>流量不限、多人共享、携带便捷、地价信号强</p>
                     </div>
                 </div>
-                <div class="s5-b">
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-                        日本
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
 
-                        韩国
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-
-                        欧洲通用
-                    </div>
-                </div>
             </div>
             <div class="sbox5">
                 <div class="s5-t">
@@ -1495,22 +1454,7 @@
                         <p>全球出境WiFi租赁 <br>流量不限、多人共享、携带便捷、地价信号强</p>
                     </div>
                 </div>
-                <div class="s5-b">
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-                        日本
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
 
-                        韩国
-                    </div>
-                    <div>
-                        <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" alt="">
-
-                        欧洲通用
-                    </div>
-                </div>
             </div>
 
 
@@ -1663,6 +1607,122 @@
                 <li>城市酒店</li>
                 <li>城市酒店</li>
             </ul>
+        </div>
+    </div>
+</div>
+
+<div class="bot-2">
+    <div >
+        <div class="b-2-t">
+            <div class="b2-1">
+                <span>为什么选择携程</span>
+                <div>
+                    <i class="i1"></i>
+                    <div class="d1">放心的服务</div>
+                    <span class="sp">领先的服务标准&nbsp独创的保障体系</span>
+                </div>
+                <div>
+                    <i class="i2"></i>
+                    <div class="d2">放心的价格</div>
+                    <span class="sp">具竞争力的价格&nbsp 无任何隐形消费</span>
+                </div>
+            </div>
+            <div class="b2-2">
+                <div>旅游资讯</div>
+                <div>
+                    <ul>
+                        <li>宾馆索引</li>
+                        <li>机票索引</li>
+                        <li>旅游索引</li>
+                        <li>邮轮索引</li>
+                        <li>用车索引</li>
+                    </ul>
+                    <ul>
+                        <li>攻略索引</li>
+                        <li>网站导航</li>
+                        <li>旅游索引</li>
+                        <li>火车票索引</li>
+                        <li>企业差旅索引</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="b2-2">
+                <div>旅游资讯</div>
+                <div>
+                    <ul>
+                        <li>宾馆索引</li>
+                        <li>机票索引</li>
+                        <li>旅游索引</li>
+                        <li>邮轮索引</li>
+                        <li>用车索引</li>
+                    </ul>
+                    <ul>
+                        <li>攻略索引</li>
+                        <li>网站导航</li>
+                        <li>旅游索引</li>
+                        <li>火车票索引</li>
+                        <li>企业差旅索引</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="b2-2">
+                <div>旅游资讯</div>
+                <div>
+                    <ul>
+                        <li>宾馆索引</li>
+                        <li>机票索引</li>
+                        <li>旅游索引</li>
+                        <li>邮轮索引</li>
+                        <li>用车索引</li>
+                    </ul>
+                    <ul>
+                        <li>攻略索引</li>
+                        <li>网站导航</li>
+                        <li>旅游索引</li>
+                        <li>火车票索引</li>
+                        <li>企业差旅索引</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="b2-3">
+                <div class="gongzhonghao">微信公众号</div>
+                <div class="erweima">
+                    <img src="https://pic.c-ctrip.com/platform/online/home/er_ctrip_wechat.jpg" alt="">
+                    <div>扫一扫，领旅行福利</div>
+                </div>
+            </div>
+        </div>
+        <div class="b-2-b">
+            <div class="b2-b1">
+                <span>Copyright &nbsp 1999-2019,ctrip.com.All&nbsprights&nbsp reserved.||ICP证：沪B2-20050130</span>
+            </div>
+            <div class="b2-b1">
+                <i></i>
+                <span>
+                沪公网备31010502002731号
+            </span>
+            </div>
+            <div class="b2-b1">
+            <span>
+                违法和不良信息举报电话021-22500846 | 上海市旅游网站落实诚信建设主体责任承诺书
+            </span>
+            </div>
+            <div class="b2-b4">
+                <div><span>信用评级</span></div>
+                <div><span>上海工商</span></div>
+                <div></div>
+                <div><span>网络社会<br>征信网</span></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="b2-b5">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </div>
 </div>
